# RustToAsciiArt

./: .gitignore  Cargo.toml  README.md  ch.txt  index.html  map.txt
src/: main.rs  object.rs  parse.rs  player.rs  resize.rs  text.rs
