[package]
name = "rust-to-ascii-art"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
num_cpus = "1.13.1"
rusttype = "0.9.2"
serde = {version = "1.0.136", features = ["derive"] }
serde_json  = "1.0.79"